fix: remove redundant log and display in parent of overflow

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -554,7 +554,6 @@ video {
 }
 
 div:has(> .overflow) {
-  display: flex;
   max-height: 100%;
   overflow-y: hidden;
 }
